retrieve_ENO_DEV1/objects/Membership_Level_Benefit__mdt.object
<CustomObject>
    <fields>
        <fullName>Benefit_Value__c</fullName>
        <label>Benefit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Name__c</fullName>
        <label>Membership Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Membership Level Benefit</label>
    <listViews>
        <fullName>All_More_info</fullName>
        <columns>Level__c</columns>
        <columns>Membership_Name__c</columns>
        <columns>Benefit_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - More info</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Membership Level Benefits</pluralLabel>
</CustomObject>